# log_analyzer_backend

./: .gitignore  Cargo.toml  Overall.md  README.md
.github/workflows/: ci.yml
infra/kubernetes/: deployment.yaml
infra/terraform/: main.tf
libs/savassan-common/: Cargo.toml
libs/savassan-common/src/: errors.rs  lib.rs  telemetry.rs
protos/savassan/v1/: data_curator.proto  execution.proto  khaydarin.proto  savassan.proto
services/data-curator/: Cargo.toml  build.rs
services/data-curator/src/: main.rs
services/data-curator/src/application/: curation_engine.rs  mod.rs  use_cases.rs
services/data-curator/src/domain/: mod.rs  models.rs  repositories.rs
services/data-curator/src/infrastructure/: database.rs  embeddings.rs  external_apis.rs  mod.rs  storage.rs
services/data-curator/src/presentation/: grpc_services.rs
services/flyte-integration/: Cargo.toml  README.md  build.rs
services/flyte-integration/src/: main.rs  savassan.v1.rs
services/flyte-integration/src/application/: mod.rs  use_cases.rs
services/flyte-integration/src/domain/: mod.rs  models.rs  repositories.rs
services/flyte-integration/src/infrastructure/: database.rs  flyte_client.rs  mod.rs
services/flyte-integration/src/presentation/: grpc_services.rs  mod.rs
services/khaydarin/: Cargo.toml  Design.md  build.rs
services/khaydarin/migrations/: 001_create_khaydarin_logs.sql
services/khaydarin/src/: main.rs
services/khaydarin/src/application/: llm_chain.rs  mod.rs  use_cases.rs
services/khaydarin/src/domain/: models.rs  repositories.rs
services/khaydarin/src/infrastructure/: database.rs  external_apis.rs  mod.rs
services/khaydarin/src/presentation/: grpc_services.rs  mod.rs  savassan.khaydarin.v1.rs  savassan.v1.rs
src/: main.rs
