[workspace]
resolver = "2"
members = [
    "services/khaydarin",
    "services/data-curator",
    "services/flyte-integration",
    "libs/savassan-common",
]

[workspace.dependencies]
# Web Framework
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "timeout"] }

async-trait = "0.1"

# gRPC & Protobuf
tonic = "0.14.1"
prost = "0.14.1"
tonic-prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost-build = "0.14.1"

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }

# Error Handling
anyhow = "1.0.99"
thiserror = "2.0.16"

# Environment variables
dotenvy = "0.15"

# Utilities
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }