[package]
name = "log_analyzer_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] } # 기존 백엔드와 HTTP 통신용
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] } # 로그의 고유 ID 생성용
chrono = { version = "0.4", features = ["serde"] } # 시간 기록용