[package]
name = "flyte-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC & Protobuf
tonic = { workspace = true }
prost = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

# Async trait for repository patterns
async-trait = { workspace = true }

dotenvy = { workspace = true }

# Common library from workspace
savassan-common = { path = "../../libs/savassan-common" }

[build-dependencies]
tonic-prost-build = { workspace = true }